[package]
name = "rxx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
rcgen = "0.13"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
indicatif = "0.17"
sha2 = "0.10"
hex = "0.4"
