[package]
name = "rxx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
rcgen = "0.13"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
indicatif = "0.17"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.7"
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
if-addrs = "0.13"
rand = "0.8"
